@@ -64,7 +64,7 @@ fi
 
 
 dnl hard dependencies
-GTKSHARP_REQUIRED_VERSION=1.9.2
+GTKSHARP_REQUIRED_VERSION=1.9.3
 GTKSOURCEVIEWSHARP_REQUIRED_VERSION=0.7
 GECKOSHARP_REQUIRED_VERSION=0.7
 MONODOC_REQUIRED_VERSION=1.0
